[package]
name = "chuncord"
version = "0.2.0"
authors = ["lemonsh <lemon@lemonsh.moe>"]
edition = "2021"

[dependencies]
ureq = { version = "2.6", default_features = false, features = ["tls"] }
clap = { version = "4.1", default_features = false, features = ["suggestions", "color", "std", "help", "usage", "derive"] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
dirs = "5.0"
indicatif = "0.17"
rand = "0.8"
